<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsDetailActivity"
    android:background="@color/black_shade">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_shade"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolBarHeading"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/newsBanner_ID"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/black"
        android:scaleType="centerCrop"
        android:layout_below="@id/toolbar_ID"
        android:contentDescription="@string/description"/>
    <TextView
        android:id="@+id/newsTitle_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/example_text"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:layout_below="@id/newsBanner_ID"
        />
    <TextView
        android:id="@+id/newsContent_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsTitle_ID"
        android:text="@string/example_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/fullArticalBTN_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_full_artical"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/newsContent_ID"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>


</RelativeLayout>